--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=usersstoredb ;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=usersstoredb ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqliteConnection": "Data Source=app.db"
   },
   "Logging": {
     "LogLevel": {
