--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=usersstoredb ;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDB": "mongodb://localhost:27017/GameDB",
     "SqliteConnection": "Data Source=app.db"
   },
   "Logging": {
