Add Map нужно пофиксить верстку

--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Game\Locations\NewTownBuildings" />
       <Folder Include="Game\UpdateClasses\Forest" />
       <Folder Include="Pages" />
     </ItemGroup>
